// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePoll should call addQuestion when both fields are filled and form is submitted 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="text-align: center; margin-top: 50px;"
      >
        <h1>
          Would You Rather
        </h1>
        <h2>
          Create Your Own Poll
        </h2>
        <form>
          <label
            data-testid="first_option_label"
          >
            <h4>
              First Option
            </h4>
          </label>
          <div>
            <input
              data-testid="first_option_input"
              placeholder="Option One"
              style="width: 800px; margin-bottom: 10px;"
              type="text"
              value="option 1"
            />
          </div>
          <label
            data-testid="second_option_label"
          >
            <h4>
              Second Option
            </h4>
          </label>
          <div>
            <input
              data-testid="second_option_input"
              placeholder="Option Two"
              style="width: 800px; margin-bottom: 20px;"
              type="text"
              value="option 2"
            />
          </div>
          <button
            data-testid="btn_submit"
            style="background-color: rgb(0, 123, 255); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: pointer;"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="text-align: center; margin-top: 50px;"
    >
      <h1>
        Would You Rather
      </h1>
      <h2>
        Create Your Own Poll
      </h2>
      <form>
        <label
          data-testid="first_option_label"
        >
          <h4>
            First Option
          </h4>
        </label>
        <div>
          <input
            data-testid="first_option_input"
            placeholder="Option One"
            style="width: 800px; margin-bottom: 10px;"
            type="text"
            value="option 1"
          />
        </div>
        <label
          data-testid="second_option_label"
        >
          <h4>
            Second Option
          </h4>
        </label>
        <div>
          <input
            data-testid="second_option_input"
            placeholder="Option Two"
            style="width: 800px; margin-bottom: 20px;"
            type="text"
            value="option 2"
          />
        </div>
        <button
          data-testid="btn_submit"
          style="background-color: rgb(0, 123, 255); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: pointer;"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CreatePoll should have submit button disabled when options are empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="text-align: center; margin-top: 50px;"
      >
        <h1>
          Would You Rather
        </h1>
        <h2>
          Create Your Own Poll
        </h2>
        <form>
          <label
            data-testid="first_option_label"
          >
            <h4>
              First Option
            </h4>
          </label>
          <div>
            <input
              data-testid="first_option_input"
              placeholder="Option One"
              style="width: 800px; margin-bottom: 10px;"
              type="text"
              value="option 1"
            />
          </div>
          <label
            data-testid="second_option_label"
          >
            <h4>
              Second Option
            </h4>
          </label>
          <div>
            <input
              data-testid="second_option_input"
              placeholder="Option Two"
              style="width: 800px; margin-bottom: 20px;"
              type="text"
              value=""
            />
          </div>
          <button
            data-testid="btn_submit"
            disabled=""
            style="background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: not-allowed;"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="text-align: center; margin-top: 50px;"
    >
      <h1>
        Would You Rather
      </h1>
      <h2>
        Create Your Own Poll
      </h2>
      <form>
        <label
          data-testid="first_option_label"
        >
          <h4>
            First Option
          </h4>
        </label>
        <div>
          <input
            data-testid="first_option_input"
            placeholder="Option One"
            style="width: 800px; margin-bottom: 10px;"
            type="text"
            value="option 1"
          />
        </div>
        <label
          data-testid="second_option_label"
        >
          <h4>
            Second Option
          </h4>
        </label>
        <div>
          <input
            data-testid="second_option_input"
            placeholder="Option Two"
            style="width: 800px; margin-bottom: 20px;"
            type="text"
            value=""
          />
        </div>
        <button
          data-testid="btn_submit"
          disabled=""
          style="background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: not-allowed;"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CreatePoll should render the CreatePoll component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="text-align: center; margin-top: 50px;"
      >
        <h1>
          Would You Rather
        </h1>
        <h2>
          Create Your Own Poll
        </h2>
        <form>
          <label
            data-testid="first_option_label"
          >
            <h4>
              First Option
            </h4>
          </label>
          <div>
            <input
              data-testid="first_option_input"
              placeholder="Option One"
              style="width: 800px; margin-bottom: 10px;"
              type="text"
              value=""
            />
          </div>
          <label
            data-testid="second_option_label"
          >
            <h4>
              Second Option
            </h4>
          </label>
          <div>
            <input
              data-testid="second_option_input"
              placeholder="Option Two"
              style="width: 800px; margin-bottom: 20px;"
              type="text"
              value=""
            />
          </div>
          <button
            data-testid="btn_submit"
            disabled=""
            style="background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: not-allowed;"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="text-align: center; margin-top: 50px;"
    >
      <h1>
        Would You Rather
      </h1>
      <h2>
        Create Your Own Poll
      </h2>
      <form>
        <label
          data-testid="first_option_label"
        >
          <h4>
            First Option
          </h4>
        </label>
        <div>
          <input
            data-testid="first_option_input"
            placeholder="Option One"
            style="width: 800px; margin-bottom: 10px;"
            type="text"
            value=""
          />
        </div>
        <label
          data-testid="second_option_label"
        >
          <h4>
            Second Option
          </h4>
        </label>
        <div>
          <input
            data-testid="second_option_input"
            placeholder="Option Two"
            style="width: 800px; margin-bottom: 20px;"
            type="text"
            value=""
          />
        </div>
        <button
          data-testid="btn_submit"
          disabled=""
          style="background-color: rgb(204, 204, 204); color: rgb(255, 255, 255); padding: 10px 20px; border-radius: 5px; width: 100px; margin-bottom: 20px; cursor: not-allowed;"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
